--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-baseurl: /starter
+baseurl: /prose-demo
 permalink: pretty
 markdown: rdiscount
 prose:
   rooturl: '_posts'
-  siteurl: 'http://prose.github.io/starter/'
-  relativeLinks: 'http://prose.github.io/starter/links.jsonp'
+  siteurl: 'http://multidis.github.io/prose-demo/'
+  relativeLinks: 'http://multidis.github.io/prose-demo/links.jsonp'
   media: 'media'
   metadata:
     _posts:
